# doc_processing

./: .coveragerc  .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
config/: celery.py  settings.py  urls.py
documents/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
documents/migrations/: 0001_initial.py  0002_alter_document_user.py
documents/tests/: test_document_admin_panel.py  test_document_create_api_view.py  test_document_model.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: create_adminuser.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py
users/tests/: test_create_adminuser.py  test_user_create_api_view.py  test_user_model.py
